[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = let, let3, assign, assignment, var, variable, conditional, if, while
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: Jython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=2.6.0
setup_requires =
    setuptools>=38.5.1
install_requires =
    setuptools>=38.5.1
packages = let
zip_safe = True

[options.extras_require]
doc =
    Sphinx>=1.5.3
test =
    unittest2;python_version<'3.0'
    backports.unittest_mock;python_version<'3.0'
    mock;python_version<'3.0'

[sdist]
formats = zip

[bdist_wheel]
universal = 1
